# xastir

./: AUTHORS  DEBUG_LEVELS  FAQ  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  OSM_template  README  README.CVS  README.CYGWIN  README.Contributing  README.Getting-Started  README.MAPS  README.OSM_maps  README.win32  TXRadar.geo  UPGRADE  USRadar.geo  acinclude.m4  bootstrap.sh  config.h.in  configure  configure.ac  xastir-min.spec  xastir.spec
Davis/: AUTHORS  ChangeLog  INSTALL  NEWS  README  bootstrap.sh  configure.ac
LaCrosse/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap.sh  configure.ac
callpass/: Makefile.am  Makefile.in  callpass.c
config/: 24kgrid.dbfawk  Makefile.am  Makefile.in  OSM_Cloudmade_administrative.dbfawk  OSM_Cloudmade_highway.dbfawk  OSM_Cloudmade_natural.dbfawk  OSM_Cloudmade_poi.dbfawk  OSM_Cloudmade_water_and_coastline.dbfawk  arealm.dbfawk  areawater.dbfawk  cousub.dbfawk  cousub00.dbfawk  edge.dbfawk  featnames.dbfawk  gfe_coastal_waters.dbfawk  gfe_coastal_waters_warnings.dbfawk  gfe_fire_weather.dbfawk  gfe_metro_areas.dbfawk  gfe_public_weather.dbfawk  gps_wpt.dbfawk  language-Dutch.sys  language-ElmerFudd.sys  language-English.sys  language-French.sys  language-German.sys  language-Italian.sys  language-MuppetsChef.sys  language-OldeEnglish.sys  language-PigLatin.sys  language-PirateEnglish.sys  language-Portuguese.sys  language-Spanish.sys  nwsc_ddmmyy.dbfawk  (+59 more)
src/rtree/: Makefile.am  Makefile.in  card.c  card.h  index.c  index.h  node.c  rect.c  split_l.c  split_l.h
symbols/: Makefile.am  Makefile.in
(+197 files in other folders)
