# $Id: Makefile.am,v 1.17 2012/11/01 18:57:19 we7u Exp $
#
# Copyright (C) 2000-2012  The Xastir Group
#

symbolsdir=${pkgdatadir}/symbols
EXTRA_DIST=symbols.dat 2x2.xbm 25pct.xbm 13pct.xbm alert.xbm  flood.xbm  red_flag.xbm  snow.xbm  torndo.xbm  wind.xbm  winter_storm.xbm  winter_weather.xbm icon.png
symbols_DATA= symbols.dat 2x2.xbm 25pct.xbm 13pct.xbm alert.xbm  flood.xbm  red_flag.xbm  snow.xbm  torndo.xbm  wind.xbm  winter_storm.xbm  winter_weather.xbm icon.png
