
# $Id: Makefile.am,v 1.8 2012/11/01 18:57:19 we7u Exp $
# Copyright (C) 2004-2012  The Xastir Group

noinst_LIBRARIES=librtree.a
librtree_a_SOURCES=index.c \
                 index.h \
                 rect.c \
                 node.c \
                 card.c \
                 card.h \
                 split_l.c \
                 split_l.h 
